Column1 (Left column) in place.  Correct spacing.

--- a/main.css
+++ b/main.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
+  font-family: Helvetica;
+}
+
+h1 {
+  font-family: 'Anton', Helvetica;
 }
 
 .heading {
@@ -13,16 +18,29 @@ body {
 .column1 {
   width: 35%;
   float: left;
+  position: relative;
+  border-bottom: 1px solid #cacaca;
 }
 
 .logo {
-  width: 50px;
-  height: 50px;
   float: right;
+  background-color: #fff;
+  width: 75px;
+  height: 75px;
   border: 2px solid #000;
   border-radius: 50px;
-  margin: -20px 0 0 0;
+  margin: -40px 0 0 0;
+}
 
+.column1 h1 {
+  clear: right;
+  width: 100%;
+  text-align: right;
+}
+
+.column1 h2 {
+  text-align: right;
+  width: 100%;
 }
 
 /*--Right Column Stylings--*/
